--- a/_config/site.yml
+++ b/_config/site.yml
@@ -5,3 +5,5 @@ profiles:
     deploy:
       host: thinkingconcurrently.com
       path: /home/public
+
+intense_debate_acct: c0aacadded8e090de7c7d19f80ab739d
