Fix up IntenseDebate comment links finally

--- a/_config/site.yml
+++ b/_config/site.yml
@@ -7,4 +7,5 @@ profiles:
       path: /home/public
 
 intense_debate_acct: c0aacadded8e090de7c7d19f80ab739d
+intense_debate_base_url: http://thinkingconcurrently.com
 google_analytics: UA-18608025-1
